--- a/portafolio.html
+++ b/portafolio.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <header>
+      <nav class="navegacion">
         <a class="logo link" href="index.html">WebStudio</a>
-        <nav class="navegacion">
           <ul>
-            <li><a class="link" href="">Estudio</a></li>
+            <li><a class="link" href="index.html">Estudio</a></li>
             <li>
               <a class="link" href="portafolio.html">Portafolio</a>
             </li>
@@ -90,18 +90,17 @@
             <span class="">Aplicaciones</span>
           </li>
       </main>
-      <footer class="footer-container">
+      <footer class="container-section-footer">
         <a class="icon link" href="index.html">WebStudio</a>
         <address class="">
           <ul class="">
-          </ul>
+          </ul class="">
         </address>
-        <address class="">Calz. Ticomán 500, Ciudad de México, CDMX, México</address>
+        <a class="footer-direction" target="_blank" href="https://www.google.com/maps/@19.5100715,-99.1326615,3a,75y,327.9h,90t/data=!3m6!1e1!3m4!1sdFQdzP6j5XSL3M-ligQvcw!2e0!7i16384!8i8192?entry=ttu" rel="noopenner">Calz. Ticomán 500, Ciudad de México, CDMX, México</a>
         <ul class="">
-          <li><a class="link" href="mailto:info@example.com">info@example.com</a></li>
+          <li><a class="link" href="info@devstudio.com">info@devstudio.com</a></li>
           <li><a class="link" href="tel:+525555296000">+52 55 5529 6000</a></li>
         </ul>
       </footer>
-  
   </body>
 </html>
