--- a/index.html
+++ b/index.html
@@ -140,12 +140,12 @@
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="index.html">WebStudio</a>
-      <address>Calz. Ticomán 500, Ciudad de México, CDMX, México</address>
+    <footer class="container-section-footer">
+      <a class="icon" href="index.html">WebStudio</a>
+      <address class="footer-direction" target="blank" >Calz. Ticomán 500, Ciudad de México, CDMX, México</address>
       <ul>
-        <li><a href="mailto:info@example.com">info@example.com</a></li>
-        <li><a href="tel:+525555296000">+52 55 5529 6000</a></li>
+        <li class=""><a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="footer-phone" href="tel:+525555296000">+52 55 5529 6000</a></li>
       </ul>
     </footer>
   </body>
