--- a/portafolio.html
+++ b/portafolio.html
@@ -48,7 +48,7 @@
         <li class="Buttons">
           <img src="./images/product1.jpg" alt="Tecnoduck" width="370" />
           <h3 class="">Tecnoduck</h3>
-          <samp class="">Sitio-web</samp>"
+          <p class="">Sitio-web</p>"
         </li>
         <li class="">
           <img src="./images/product2.jpg" alt="Póster de Nueva Orleans vs Estrella Dorada" width="370" />
