--- a/portafolio.html
+++ b/portafolio.html
@@ -1,106 +1,155 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=>, initial-scale=1.0" />
-    <title>Portafolio</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <title>portafolio</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
   </head>
   <body>
     <header>
-      <nav class="navegacion">
-        <a class="logo link" href="index.html">WebStudio</a>
-          <ul>
-            <li><a class="link" href="index.html">Estudio</a></li>
-            <li>
-              <a class="link" href="portafolio.html">Portafolio</a>
-            </li>
-            <li><a  class="link">Contactos</a></li>
-          </ul>
-        </nav>
-        <ul>
-          <li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="link" href="tel:+525555296000">+52 55 5529 6000</a></li>
-        </ul>
-      </header>
-      <main>
-        <section class="Filter">
-        <ul class="">
-          <li>
-            <button class="button-item-button" type="button">Todos</button>
+      <nav class="navigation">
+        <a class="logo" href="index.html">Webstudio</a>
+        <ul class="navigation-list">
+          <li class="navigation-list-items">
+            <a class="navigation-list-items-item" href="index.html">Estudio</a>
           </li>
-        </li>
-        <li class="">
-          <button class="" type="button-item-button">Sitio-web</button>
-        </li>
-        <li class="button-item-button">
-        <button class="" type="button">Aplicaciones</button>
-        </li>
-        <li class="">
-          <button class="button-item-button" type="button">Diseño</button>
-        </li>
-        <li class="">
-          <button class="button-item-button" type="button">Marketing</button>
-        </li>
-        </ul>
-    </section>
-        <ul class="Buttons">
-        <li class="Buttons">
-          <img src="./images/product1.jpg" alt="Tecnoduck" width="370" />
-          <h3 class="">Tecnoduck</h3>
-          <p class="">Sitio-web</p>"
-        </li>
-        <li class="">
-          <img src="./images/product2.jpg" alt="Póster de Nueva Orleans vs Estrella Dorada" width="370" />
-          <h3 class="">projects-title</h3>
-        </li>
-        <li class="">
-          <img src="./images/product3.jpg" alt="Restaurante de Mariscos" width="370" />
-          <h3 class="">Restaurante de Mariscos</h3>
-          <span class="">Aplicaciones</span>
-        </li>
-        <li class="">
-          <img src="./images/product4.jpg" alt="Restaurante de Mariscos" width="370" />
-          <h3 class="">Proyecto Prime</h3>
-          <span class="">Marketing</span>
-        </li>
-        <li class="">
-          <img src="./images/product5.jpg" alt="Proyecto Cajas" width="370" />
-          <h3 class="">Proyecto Cajas</h3>
-          <span class="">Aplicaciones</span>
-        </li>
-        <li class="">
-        <img src="./images/product6.jpg" alt="La inspiración no tiene límites" width="370" />
-        <h3 class="">La inspiración no tiene límites</h3>
-        <span class="">Sitio-web</span>
-        </li>
-        <li class="">
-        <img src="./images/product7.jpg" alt="Edición Limitada" width="370" />
-        <h3 class="">Edición Limitada</h3>
-        <span class="">projects-description</span>
-        </li>
-              <li class="">
-                <img src="./images/product8.jpg" alt="Proyecto LAB" width="370" />
-                <h3 class="">Proyecto LAB</h3>
-                <span class="">Marketing</span>
-                </li>
-                <li class="">
-                <img src="./images/product9.jpg" alt="Negocio en Crecimiento" width="370" />
-              <h3 class="">Negocio en Crecimiento</h3>
-            <span class="">Aplicaciones</span>
+          <li class="navigation-list-items">
+            <a class="navigation-list-items-item" href="portfolio.html"
+              >Portafolio</a
+            >
           </li>
-      </main>
-      <footer class="container-section-footer">
-        <a class="icon link" href="index.html">WebStudio</a>
-        <address class="">
-          <ul class="">
-          </ul class="">
-        </address>
-        <a class="footer-direction" target="_blank" href="https://www.google.com/maps/@19.5100715,-99.1326615,3a,75y,327.9h,90t/data=!3m6!1e1!3m4!1sdFQdzP6j5XSL3M-ligQvcw!2e0!7i16384!8i8192?entry=ttu" rel="noopenner">Calz. Ticomán 500, Ciudad de México, CDMX, México</a>
-        <ul class="">
-          <li><a class="link" href="info@devstudio.com">info@devstudio.com</a></li>
-          <li><a class="link" href="tel:+525555296000">+52 55 5529 6000</a></li>
+          <li class="navigation-list-items">
+            <a class="navigation-list-items-item" href="#">Contacto</a>
+          </li>
         </ul>
-      </footer>
+      </nav>
+      <ul class="dataright">
+        <li class="dataright-item">
+          <a class="dataright-item-email" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
+        <li class="dataright-item">
+          <a class="dataright-item-phone" href="tel:+525555296000"
+            >+52 55 5529 6000</a
+          >
+        </li>
+      </ul>
+    </header>
+    <main>
+      <section class="filter">
+        <h1 class="filter-portfolio">portfolio</h1>
+        <ul class="buttons">
+          <li class="buttons-item">
+            <button class="buttons-item-button" type="button">Todo</button>
+          </li>
+          <li class="buttons-item">
+            <button class="buttons-item-button" type="button">Sitio-web</button>
+          </li>
+          <li class="buttons-item">
+            <button class="buttons-item-button" type="button">
+              Aplicaciones
+            </button>
+          </li>
+          <li class="buttons-item">
+            <button class="buttons-item-button" type="button">Diseño</button>
+          </li>
+          <li class="buttons-item">
+            <button class="buttons-item-button" type="button">Marketing</button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <ul class="hero-list">
+          <li class="hero-list-item">
+            <img src="images/product1.jpg" alt="Tecnoduck" width="370" />
+            <h3 class="image-description">Tecnoduck</h3>
+            <span class="text-description">Sitio-web</span>
+          </li>
+          <li class="hero-list-item">
+            <img
+              src="images/product2.jpg"
+              alt="Póster de Nueva Orleans vs Estrella Dorada"
+              width="370"
+            />
+            <h3 class="image-description">
+              Póster de Nueva Orleans vs Estrella Dorada
+            </h3>
+          </li>
+          <li class="hero-list-item">
+            <img
+              src="images/product3.jpg"
+              alt="Restaurante Seafood"
+              width="370"
+            />
+            <h3 class="image-description">Restaurante Seafood</h3>
+            <span class="text-description">Aplicaciones</span>
+          </li>
+          <li class="hero-list-item">
+            <img src="images/product4.jpg" alt="Proyecto Prime" width="370" />
+            <h3 class="image-description">Proyecto Prime</h3>
+            <span class="text-description">Marketing</span>
+          </li>
+          <li class="hero-list-item">
+            <img src="images/product5.jpg" alt="Proyecto Cajas" width="370" />
+            <h3 class="image-description">Proyecto Cajas</h3>
+            <span class="text-description"> Aplicaciones</span>
+          </li>
+          <li class="hero-list-item">
+            <img
+              src="images/product6.jpg"
+              alt="La inspiración no tiene límites"
+              width="370"
+            />
+            <h3 class="image-description">La inspiración no tiene límites</h3>
+            <span class="text-description">Sitio-web</span>
+          </li>
+          <li class="hero-list-item">
+            <img src="images/product7.jpg" alt="Edición Limitada" width="370" />
+            <h3 class="image-description">Edición Limitada</h3>
+            <span class="text-description">Diseño</span>
+          </li>
+          <li class="hero-list-item">
+            <img src="images/product8.jpg" alt="Proyecto LAB" width="370" />
+            <h3 class="image-description">Proyecto LAB</h3>
+            <span class="text-description">Marketing</span>
+          </li>
+          <li class="hero-list-item">
+            <img
+              src="images/product9.jpg"
+              alt="Negocio en Crecimiento"
+              width="370"
+            />
+            <h3 class="image-description">Negocio en Crecimiento</h3>
+            <span class="text-description">Aplicaciones</span>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer class="footer-container">
+      <a class="icon" href="index.html">Webstudio</a>
+      <address class="">
+        <ul class="">
+          <li class="">
+            <a
+              class="footer-direction"
+              target="_blank"
+              href="https://www.google.com/maps/@19.5100715,-99.1326615,3a,75y,327.9h,90t/data=!3m6!1e1!3m4!1sdFQdzP6j5XSL3M-ligQvcw!2e0!7i16384!8i8192?entry=ttu"
+              rel="noopener noreferrer"
+              >Calz. Ticomán 500, Ciudad de México, CDMX, México</a
+            >
+          </li>
+          <li class="">
+            <a class="footer-mail" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="">
+            <a class="footer-phone" href="tel:+525555296000"
+              >+52 55 5529 6000</a
+            >
+          </li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
